--- a/vimmasite/vimma/static/vimma/components/schedule-editor/schedule-editor.html
+++ b/vimmasite/vimma/static/vimma/components/schedule-editor/schedule-editor.html
@@ -13,7 +13,7 @@
     <ajax-state id="ajax"></ajax-state>
 
     <paper-input label="Schedule Name" floatingLabel="true"
-      required error="The name may not be empty" on-input="{{nameEdited}}"
+      required error="The name may not be empty"
       value="{{editModel.name}}" disabled?="{{$.ajax.inProgress}}">
     </paper-input>
 
@@ -23,11 +23,14 @@
     </matrix-editor>
 
     TimeZone:
-    <paper-dropdown-menu selected="{{editModel.timezone}}" valueattr="tzid"
-      on-core-select="{{timezoneSelected}}">
-      <template repeat="{{tz in timezones}}">
-        <paper-item label="{{tz.name}}" tzid="{{tz.id}}"></paper-item>
-      </template>
+    <paper-dropdown-menu>
+      <paper-dropdown class="dropdown">
+        <core-menu class="menu" selected="{{tzIdx}}">
+          <template repeat="{{tz in timezones}}">
+            <paper-item>{{tz.name}}</paper-item>
+          </template>
+        </core-menu>
+      </paper-dropdown>
     </paper-dropdown-menu>
     <br>
     <input id="is_special" type="checkbox" checked="{{editModel.is_special}}"
