--- a/vimmasite/vimma/static/vimma/components/vm-detail/vm-schedule-picker.html
+++ b/vimmasite/vimma/static/vimma/components/vm-detail/vm-schedule-picker.html
@@ -23,11 +23,14 @@
 
     <template id="main">
       Schedule
-      <paper-dropdown-menu selected="{{newSchedId}}" valueattr="key"
-          disabled?="{{$.ajax.inProgress}}" on-core-select="{{schedSelected}}">
-        <template repeat="{{s in schedules}}">
-          <paper-item label="{{s.name}}" key="{{s.id}}"></paper-item>
-        </template>
+      <paper-dropdown-menu disabled?="{{$.ajax.inProgress}}">
+        <paper-dropdown class="dropdown">
+          <core-menu class="menu" selected="{{newSchedIdx}}">
+            <template repeat="{{s in schedules}}">
+              <paper-item>{{s.name}}</paper-item>
+            </template>
+          </core-menu>
+        </paper-dropdown>
       </paper-dropdown-menu>
 
       <paper-button id="save" raised on-click={{save}}
