--- a/vimmasite/vimma/static/vimma/components/index-elem/index-elem.html
+++ b/vimmasite/vimma/static/vimma/components/index-elem/index-elem.html
@@ -1,6 +1,4 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/core-elements/core-elements.html">
-<link rel="import" href="../bower_components/paper-elements/paper-elements.html">
 
 <link rel="import" href="../schedule-list/schedule-list.html">
 <link rel="import" href="../projects-tab/projects-tab.html">
@@ -11,17 +9,33 @@
 
 <polymer-element name="index-elem">
   <template>
-    <link rel="stylesheet" type="text/css" href="index-elem.css">
+    <!-- Otherwise bootstrap styles don't get applied from the main document.
+      Can't get PolymerJS to use a (model) variable in the href. -->
+    <link rel="stylesheet" type="text/css" href="/static/vimma/components/bower_components/bootstrap/dist/css/bootstrap.min.css">
 
     <ajax-frag-history id="ajaxHist" frag="{{frag}}"></ajax-frag-history>
     <ajax-frag-splitter id="ajaxFrag" frag="{{frag}}">
     </ajax-frag-splitter>
 
-    <paper-tabs selected="{{selectedIdx}}">
-      <template repeat="{{tab in tabs}}">
-        <paper-tab key="{{tab.key}}">{{tab.title}}</paper-tab>
-      </template>
-    </paper-tabs>
+    <nav class="navbar navbar-default" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="">Vimma</a>
+        </div>
+
+        <div>
+          <ul class="nav navbar-nav" on-click="{{navClicked}}">
+            <template repeat="{{tab in tabs}}">
+              <li class="{{ {active: tab.key == $.ajaxFrag.head} | tokenList}}">
+                <a href="{{tab.url}}">
+                  {{tab.title}}
+                </a>
+              </li>
+            </template>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
     <template if="{{$.ajaxFrag.head == tabs[0].key}}">
       <vms-tab frag="{{$.ajaxFrag.tail}}"></vms-tab>
