--- a/vimmasite/vimma/templates/vimma/index.html
+++ b/vimmasite/vimma/templates/vimma/index.html
@@ -2,7 +2,8 @@
 {% load staticfiles %}
 
 {% block head %}
-  <title>Vimma</title>
+  <!-- Without <title>, the back-forward browser history shows the #! urls -->
+  <!--title>Vimma</title-->
   <link rel="stylesheet" type="text/css" href="{% static 'vimma/components/bower_components/bootstrap/dist/css/bootstrap.min.css' %}">
 
   <script src="{% static 'vimma/components/bower_components/webcomponentsjs/webcomponents.js' %}"></script>
