vm: add optional comment field (set at vm creation, can't change later)

--- a/vimmasite/vimma/static/vimma/components/create-vm/create-vm.html
+++ b/vimmasite/vimma/static/vimma/components/create-vm/create-vm.html
@@ -80,6 +80,11 @@
       </paper-dropdown-menu>
 
       <br>
+      <paper-input label="Comment (optional)" floatingLabel="true"
+        value="{{comment}}">
+      </paper-input>
+
+      <br>
 
       <template if="{{newVMType == 'dummy'}}">
         <create-vm-dummy-data data="{{newVMData}}">
