vm: store & show creator and creation time
destroy & remake DB migrations

--- a/vimmasite/vimma/static/vimma/components/audit-display/audit-display.css
+++ b/vimmasite/vimma/static/vimma/components/audit-display/audit-display.css
@@ -20,6 +20,10 @@
 	color: green;
 }
 
+table#table > tbody local-date {
+	font-family: monospace;
+}
+
 table#table > thead {
 	font-weight: bold;
 }
