--- a/vimmasite/vimma/static/vimma/components/vm-detail/aws-vm-detail.html
+++ b/vimmasite/vimma/static/vimma/components/vm-detail/aws-vm-detail.html
@@ -29,6 +29,8 @@
     <template id="main">
       AWS VM ‘{{awsvm.name}}’.<br>
       State: ‘{{awsvm.state}}’<br>
+      DNS name: ‘{{awsvm.name}}.{{awsprovider.route_53_zone}}’<br>
+      IP {{awsvm.ip_address || '(none)'}}<br>
       Region: ‘{{awsvm.region}}’<br>
       Reservation id: ‘{{awsvm.reservation_id}}’<br>
       Instance id: ‘{{awsvm.instance_id}}’<br>
