mark deleted vms

--- a/vimmasite/vimma/static/vimma/components/local-date/local-date.html
+++ b/vimmasite/vimma/static/vimma/components/local-date/local-date.html
@@ -12,9 +12,9 @@
   hidemillis doesn't display milliseconds (.mmm above).
 -->
 <polymer-element name="local-date" attributes="date alwaysshowdate hidemillis">
-  <template>
-    <span title="{{isoStr}}">{{result}}</span>
-  </template>
+  <template><!--
+    --><span title="{{isoStr}}">{{result}}</span><!--
+  --></template>
 
   <script src="local-date.js"></script>
 </polymer-element>
