--- a/vimmasite/vimma/static/vimma/components/vm-detail/vm-detail.css
+++ b/vimmasite/vimma/static/vimma/components/vm-detail/vm-detail.css
@@ -23,3 +23,12 @@ div#audit-display {
 strong#toggle-logs {
 	cursor: pointer;
 }
+
+.destroyed-logo {
+	color: DarkGoldenRod;
+}
+
+div#destroyed-details {
+	color: DarkGoldenRod;
+	font-weight: bold;
+}
