put <create-vm> behind a button ‘Create a new VM’

--- a/vimmasite/vimma/static/vimma/components/create-vm/create-vm.css
+++ b/vimmasite/vimma/static/vimma/components/create-vm/create-vm.css
@@ -16,3 +16,13 @@
 	border: 0.15em solid khaki;
 	padding: 0.5em;
 }
+
+#close {
+	color: DarkGray;
+	font-size: 2em;
+	float: right;
+	cursor: pointer;
+}
+#close:hover {
+	color: DimGray;
+}
